<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.jiaying.mediatablet.fragment.FunctionSettingFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/btn_inner_padding"
            android:text="@string/watch_film"
            android:textColor="@color/txt_black"
            android:textSize="@dimen/text_size_midle" />

        <Switch
            android:id="@+id/watch_film_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/btn_padding"
            android:textOff="OFF"
            android:textOn="ON" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/line_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/btn_inner_padding"
            android:text="@string/surf_internet"
            android:textColor="@color/txt_black"
            android:textSize="@dimen/text_size_midle" />

        <Switch
            android:id="@+id/surf_it_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/btn_padding"
            android:textOff="OFF"
            android:textOn="ON" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/line_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/btn_inner_padding"
            android:text="@string/advice"
            android:textColor="@color/txt_black"
            android:textSize="@dimen/text_size_midle" />

        <Switch
            android:id="@+id/advice_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/btn_padding"
            android:textOff="OFF"
            android:textOn="ON" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/line_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/btn_inner_padding"
            android:text="@string/appointment"
            android:textColor="@color/txt_black"
            android:textSize="@dimen/text_size_midle" />

        <Switch
            android:id="@+id/appointment_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/btn_padding"
            android:textOff="OFF"
            android:textOn="ON" />
    </LinearLayout>
</LinearLayout>
